Fix for Title and journal browse.

--- a/local/import/marc.properties
+++ b/local/import/marc.properties
@@ -50,39 +50,65 @@ title_LNK = LNK130adfklmnoprs:LNK210ab:LNK240adfklmnoprs:LNK243adfklmnoprs:LNK24
 title_new = 785ast:LNK785ast
 title_sort = custom, getSortableTitle
 
-
-title_browse = 130adfklmnoprs:210ab:240adfklmnoprs:243adfklmnoprs:245abfgknps:246abnp:247abnp:534t:700fklmnoprst:710fklmnoprst:711fklnpst:730adfklmnoprs:740anp:775t:776t:LNK130adfklmnoprs:LNK210ab:LNK240adfklmnoprs:LNK243adfklmnoprs:LNK245abfgknps:LNK246abnp:LNK247abnp:LNK534t:LNK700fklmnoprst:LNK710fklmnoprst:LNK711fklnpst:LNK730adfklmnoprs:LNK740anp:LNK775t:LNK776t, clean
-
-title_browse += 130adfklmnoprs ? (ind1 > 0), titleSortLower
-title_browse += 730adfklmnoprs ? (ind1 > 0), titleSortLower
-title_browse += 740anp ? (ind1 > 0), titleSortLower
-title_browse += LNK130adfklmnoprs ? (ind1 > 0), titleSortLower
-title_browse += LNK730adfklmnoprs ? (ind1 > 0), titleSortLower
-title_browse += LNK740anp ? (ind1 > 0), titleSortLower
-title_browse += 240adfklmnoprs ? (ind2 > 0), titleSortLower
-title_browse += 243adfklmnoprs ? (ind2 > 0), titleSortLower
-title_browse += 245abfgknps ? (ind2 > 0), titleSortLower
-title_browse += LNK240adfklmnoprs ? (ind2 > 0), titleSortLower
-title_browse += LNK243adfklmnoprs ? (ind2 > 0), titleSortLower
-title_browse += LNK245abfgknps ? (ind2 > 0), titleSortLower
-
-title_browse_sort = 130adfklmnoprs:210ab:240adfklmnoprs:243adfklmnoprs:245abfgknps:246abnp:247abnp:534t:700fklmnoprst:710fklmnoprst:711fklnpst:730adfklmnoprs:740anp:775t:776t:LNK130adfklmnoprs:LNK210ab:LNK240adfklmnoprs:LNK243adfklmnoprs:LNK245abfgknps:LNK246abnp:LNK247abnp:LNK534t:LNK700fklmnoprst:LNK710fklmnoprst:LNK711fklnpst:LNK730adfklmnoprs:LNK740anp:LNK775t:LNK776t, clean
-
-title_browse_sort += 130adfklmnoprs ? (ind1 > 0), stripInd1, toLower, stripAccent, clean, filter("[=&(),'-.]|\\[|\\]=>\ "), filter("[ ][ ]+=>\ ")
-title_browse_sort += 730adfklmnoprs ? (ind1 > 0), stripInd1, toLower, stripAccent, clean, filter("[=&(),'-.]|\\[|\\]=>\ "), filter("[ ][ ]+=>\ ")
-title_browse_sort += 740anp ? (ind1 > 0), stripInd1, toLower, stripAccent, clean, filter("[=&(),'-.]|\\[|\\]=>\ "), filter("[ ][ ]+=>\ ")
-title_browse_sort += LNK130adfklmnoprs ? (ind1 > 0), stripInd1, toLower, stripAccent, clean, filter("[=&(),'-.]|\\[|\\]=>\ "), filter("[ ][ ]+=>\ ")
-title_browse_sort += LNK730adfklmnoprs ? (ind1 > 0), stripInd1, toLower, stripAccent, clean, filter("[=&(),'-.]|\\[|\\]=>\ "), filter("[ ][ ]+=>\ ")
-title_browse_sort += LNK740anp ? (ind1 > 0), stripInd1, toLower, stripAccent, clean, filter("[=&(),'-.]|\\[|\\]=>\ "), filter("[ ][ ]+=>\ ")
-title_browse_sort += 240adfklmnoprs ? (ind2 > 0), stripInd2, toLower, stripAccent, clean, filter("[=&(),'-.]|\\[|\\]=>\ "), filter("[ ][ ]+=>\ ")
-title_browse_sort += 243adfklmnoprs ? (ind2 > 0), stripInd2, toLower, stripAccent, clean, filter("[=&(),'-.]|\\[|\\]=>\ "), filter("[ ][ ]+=>\ ")
-title_browse_sort += 245abfgknps ? (ind2 > 0), stripInd2, toLower, stripAccent, clean, filter("[=&(),'-.]|\\[|\\]=>\ "), filter("[ ][ ]+=>\ ")
-title_browse_sort += LNK240adfklmnoprs ? (ind2 > 0), stripInd2, toLower, stripAccent, clean, filter("[=&(),'-.]|\\[|\\]=>\ "), filter("[ ][ ]+=>\ ")
-title_browse_sort += LNK243adfklmnoprs ? (ind2 > 0), stripInd2, toLower, stripAccent, clean, filter("[=&(),'-.]|\\[|\\]=>\ "), filter("[ ][ ]+=>\ ")
-title_browse_sort += LNK245abfgknps ? (ind2 > 0), stripInd2, toLower, stripAccent, clean, filter("[=&(),'-.]|\\[|\\]=>\ "), filter("[ ][ ]+=>\ ")
-
 title_uniform = 130adfghklmnoprst:240adfghklmnoprs:730adfghiklmnoprstx
 title_contents = 505a:505t
+
+
+title_browse = 130adfklmnoprs:210ab:240adfklmnoprs:243adfklmnoprs:245abfgknps:246abnp:247abnp:534t:700fklmnoprst:710fklmnoprst:711fklnpst:730adfklmnoprs:740anp:775t:776t:LNK130adfklmnoprs:LNK210ab:LNK240adfklmnoprs:LNK243adfklmnoprs:LNK245abfgknps:LNK246abnp:LNK247abnp:LNK534t:LNK700fklmnoprst:LNK710fklmnoprst:LNK711fklnpst:LNK730adfklmnoprs:LNK740anp:LNK775t:LNK776t, notunique
+
+title_browse += {130adfklmnoprs} ? (ind1 > 0), notunique
+title_browse += {730adfklmnoprs} ? (ind1 > 0), notunique
+title_browse += {740anp} ? (ind1 > 0), notunique
+title_browse += {LNK130adfklmnoprs} ? (ind1 > 0), notunique
+title_browse += {LNK730adfklmnoprs} ? (ind1 > 0), notunique
+title_browse += {LNK740anp} ? (ind1 > 0), notunique
+title_browse += {240adfklmnoprs} ? (ind2 > 0), notunique
+title_browse += {243adfklmnoprs} ? (ind2 > 0), notunique
+title_browse += {245abfgknps} ? (ind2 > 0), notunique
+title_browse += {LNK240adfklmnoprs} ? (ind2 > 0), notunique
+title_browse += {LNK243adfklmnoprs} ? (ind2 > 0), notunique
+title_browse += {LNK245abfgknps} ? (ind2 > 0), notunique
+
+title_browse_sort = 130adfklmnoprs:210ab:240adfklmnoprs:243adfklmnoprs:245abfgknps:246abnp:247abnp:534t:700fklmnoprst:710fklmnoprst:711fklnpst:730adfklmnoprs:740anp:775t:776t:LNK130adfklmnoprs:LNK210ab:LNK240adfklmnoprs:LNK243adfklmnoprs:LNK245abfgknps:LNK246abnp:LNK247abnp:LNK534t:LNK700fklmnoprst:LNK710fklmnoprst:LNK711fklnpst:LNK730adfklmnoprs:LNK740anp:LNK775t:LNK776t, clean, notunique
+
+title_browse_sort += {130adfklmnoprs} ? (ind1 > 0), stripInd1, toLower, stripAccent, clean, notunique
+title_browse_sort += {730adfklmnoprs} ? (ind1 > 0), stripInd1, toLower, stripAccent, clean, notunique
+title_browse_sort += {740anp} ? (ind1 > 0), stripInd1, toLower, stripAccent, clean, notunique
+title_browse_sort += {LNK130adfklmnoprs} ? (ind1 > 0), stripInd1, toLower, stripAccent, clean, notunique
+title_browse_sort += {LNK730adfklmnoprs} ? (ind1 > 0), stripInd1, toLower, stripAccent, clean, notunique
+title_browse_sort += {LNK740anp} ? (ind1 > 0), stripInd1, toLower, stripAccent, clean, notunique
+title_browse_sort += {240adfklmnoprs} ? (ind2 > 0), stripInd2, toLower, stripAccent, clean, notunique
+title_browse_sort += {243adfklmnoprs} ? (ind2 > 0), stripInd2, toLower, stripAccent, clean, notunique
+title_browse_sort += {245abfgknps} ? (ind2 > 0), stripInd2, toLower, stripAccent, clean, notunique
+title_browse_sort += {LNK240adfklmnoprs} ? (ind2 > 0), stripInd2, toLower, stripAccent, clean, notunique
+title_browse_sort += {LNK243adfklmnoprs} ? (ind2 > 0), stripInd2, toLower, stripAccent, clean, notunique
+title_browse_sort += {LNK245abfgknps} ? (ind2 > 0), stripInd2, toLower, stripAccent, clean, notunique
+
+
+
+journal_browse = {130a:210ab:211a:212a:214a:242abnp:245abnp:246abnp:247abnp:740anp:840av:LNK130a:LNK210ab:LNK211a:LNK212a:LNK214a:LNK242abnp:LNK245abnp:LNK246abnp:LNK247abnp:LNK740anp:LNK840avd} ? (000[6]='a' && (000[7]='b' || 000[7]='i' || 000[7]='s')), clean
+
+journal_browse += {130a} ? ((ind1 > 0) && (000[6] = 'a' && (000[7] = 'b' || 000[7] = 'i' || 000[7] = 's'))), clean
+journal_browse += {LNK130a} ? ((ind1 > 0) && (000[6] = 'a' && (000[7] = 'b' || 000[7] = 'i' || 000[7] = 's'))), clean
+journal_browse += {242abnp} ? ((ind2 > 0) && (000[6] = 'a' && (000[7] = 'b' || 000[7] = 'i' || 000[7] = 's'))), clean
+journal_browse += {LNK242abnp} ? ((ind2 > 0) && (000[6] = 'a' && (000[7] = 'b' || 000[7] = 'i' || 000[7] = 's'))), clean
+journal_browse += {245abnp} ? ((ind2 > 0) && (000[6] = 'a' && (000[7] = 'b' || 000[7] = 'i' || 000[7] = 's'))), clean
+journal_browse += {LNK245abnp} ? ((ind2 > 0) && (000[6] = 'a' && (000[7] = 'b' || 000[7] = 'i' || 000[7] = 's'))), clean
+journal_browse += {740anp} ? ((ind1 > 0) && (000[6] = 'a' && (000[7] = 'b' || 000[7] = 'i' || 000[7] = 's'))), clean
+journal_browse += {LNK740anp} ? ((ind1 > 0) && (000[6] = 'a' && (000[7] = 'b' || 000[7] = 'i' || 000[7] = 's'))), clean
+
+
+journal_browse_sort = {130a:210ab:211a:212a:214a:242abnp:245abnp:246abnp:247abnp:740anp:840av:LNK130a:LNK210ab:LNK211a:LNK212a:LNK214a:LNK242abnp:LNK245abnp:LNK246abnp:LNK247abnp:LNK740anp:LNK840avd} ? (000[6]='a' && (000[7] ='b' || 000[7] = 'i' || 000[7] = 's')), clean
+
+		
+journal_browse_sort += {130a} ? ((ind1 > 0) && (000[6] = 'a' && (000[7] = 'b' || 000[7] = 'i' || 000[7] = 's'))), stripInd1, stripAccent, clean
+journal_browse_sort += {LNK130a} ? ((ind1 > 0) && (000[6] = 'a' && (000[7] = 'b' || 000[7] = 'i' || 000[7] = 's'))), stripInd1, stripAccent, clean
+journal_browse_sort += {242abnp} ? ((ind2 > 0) && (000[6] = 'a' && (000[7] = 'b' || 000[7] = 'i' || 000[7] = 's'))), stripInd2, stripAccent, clean
+journal_browse_sort += {LNK242abnp} ? ((ind2 > 0) && (000[6] = 'a' && (000[7] = 'b' || 000[7] = 'i' || 000[7] = 's'))), stripInd2, stripAccent, clean
+journal_browse_sort += {245abnp} ? ((ind2 > 0) && (000[6] = 'a' && (000[7] = 'b' || 000[7] = 'i' || 000[7] = 's'))), stripInd2, stripAccent, clean
+journal_browse_sort += {LNK245abnp} ? ((ind2 > 0) && (000[6] = 'a' && (000[7] = 'b' || 000[7] = 'i' || 000[7] = 's'))), stripInd2, stripAccent, clean
+journal_browse_sort += {740anp} ? ((ind1 > 0) && (000[6] = 'a' && (000[7] = 'b' || 000[7] = 'i' || 000[7] = 's'))), stripInd1, stripAccent, clean
+journal_browse_sort += {LNK740anp} ? ((ind1 > 0) && (000[6] = 'a' && (000[7] = 'b' || 000[7] = 'i' || 000[7] = 's'))), stripInd1, stripAccent, clean
 
 
 series = 400abcdfgklnptuvx:410abcdfgklnptuvx:411acdefgklnpqtuvx:440anpvx:490avx:LNK400abcdfgklnptuvx:LNK410abcdfgklnptuvx:LNK411acdefgklnpqtuvx:LNK440anpvx:LNK490avx
@@ -105,26 +131,6 @@ isbn = 020acz
 issn = 022ayz
 
 barcode = 927b
-
-journal_browse = 130a:210ab:211a:212a:214a:242abnp:245abnp:246abnp:247abnp:740anp:840av:LNK130a:LNK210ab:LNK211a:LNK212a:LNK214a:LNK242abnp:LNK245abnp:LNK246abnp:LNK247abnp:LNK740anp:LNK840avd, clean
-journal_browse |= 130a ? ( 000[6] == 'a' && (000[7] == 'b' || 000[7] == 'i' || 000[7] == 's') && (ind1 > 0)), titleSortLower, filter("[=&(),'.-]|\\[|\\]=>\ ")
-journal_browse |= LNK130a ? ( 000[6] == 'a' && (000[7] == 'b' || 000[7] == 'i' || 000[7] == 's') && (ind1 > 0)), titleSortLower, filter("[=&(),'.-]|\\[|\\]=>\ ")  
-journal_browse |= 740anp ? ( 000[6] == 'a' && (000[7] == 'b' || 000[7] == 'i' || 000[7] == 's') && (ind1 > 0)), titleSortLower, filter("[=&(),'.-]|\\[|\\]=>\ ") 
-journal_browse |= LNK740anp ? ( 000[6] == 'a' && (000[7] == 'b' || 000[7] == 'i' || 000[7] == 's') && (ind1 > 0)), titleSortLower, filter("[=&(),'.-]|\\[|\\]=>\ ") 
-journal_browse |= 242abnp ? ( 000[6] == 'a' && (000[7] == 'b' || 000[7] == 'i' || 000[7] == 's') && (ind2 > 0)), titleSortLower, filter("[=&(),'.-]|\\[|\\]=>\ ") 
-journal_browse |= 245abnp ? ( 000[6] == 'a' && (000[7] == 'b' || 000[7] == 'i' || 000[7] == 's') && (ind2 > 0)), titleSortLower, filter("[=&(),'.-]|\\[|\\]=>\ ")
-journal_browse |= LNK242abnp ? ( 000[6] == 'a' && (000[7] == 'b' || 000[7] == 'i' || 000[7] == 's') && (ind2 > 0)), titleSortLower, filter("[=&(),'.-]|\\[|\\]=>\ ") 
-journal_browse |= LNK245abnp ?  ( 000[6] == 'a' && (000[7] == 'b' || 000[7] == 'i' || 000[7] == 's') && (ind2 > 0)), titleSortLower, filter("[=&(),'.-]|\\[|\\]=>\ ") 
-
-journal_browse_sort = 130a:210ab:211a:212a:214a:242abnp:245abnp:246abnp:247abnp:740anp:840av:LNK130a:LNK210ab:LNK211a:LNK212a:LNK214a:LNK242abnp:LNK245abnp:LNK246abnp:LNK247abnp:LNK740anp:LNK840avd ? (000[6] == 'a' && (000[7] == 'b'|| 000[7] == 'i' || 000[7] == 's')), clean
-journal_browse_sort |= 130a ?  ( 000[6] == 'a' && (000[7] == 'b' || 000[7] == 'i' || 000[7] == 's') && (ind1 > 0)), stripInd1, toLower, stripAccent, clean, join(" "), filter("[=&(),'-.]|\\[|\\]=>\ "), filter("[ ][ ]+=>\ ")
-journal_browse_sort |= LNK130a ? ( 000[6] == 'a' && (000[7] == 'b' || 000[7] == 'i' || 000[7] == 's') && (ind1 > 0)), stripInd1, toLower, stripAccent, clean, join(" "), filter("[=&(),'-.]|\\[|\\]=>\ "), filter("[ ][ ]+=>\ ")
-journal_browse_sort |= 740anp ? ( 000[6] == 'a' && (000[7] == 'b' || 000[7] == 'i' || 000[7] == 's') && (ind1 > 0)), stripInd1, toLower, stripAccent, clean, join(" "), filter("[=&(),'-.]|\\[|\\]=>\ "), filter("[ ][ ]+=>\ ")
-journal_browse_sort |= LNK740anp ? ( 000[6] == 'a' && (000[7] == 'b' || 000[7] == 'i' || 000[7] == 's') && (ind1 > 0)), stripInd1, toLower, stripAccent, clean, join(" "), filter("[=&(),'-.]|\\[|\\]=>\ "), filter("[ ][ ]+=>\ ")
-journal_browse_sort |= 242abnp ? ( 000[6] == 'a' && (000[7] == 'b' || 000[7] == 'i' || 000[7] == 's') && (ind2 > 0)), stripInd2, toLower, stripAccent, clean, join(" "), filter("[=&(),'-.]|\\[|\\]=>\ "), filter("[ ][ ]+=>\ ")
-journal_browse_sort |= LNK242abnp ? ( 000[6] == 'a' && (000[7] == 'b' || 000[7] == 'i' || 000[7] == 's') && (ind2 > 0)), stripInd2, toLower, stripAccent, clean, join(" "), filter("[=&(),'-.]|\\[|\\]=>\ "), filter("[ ][ ]+=>\ ")
-journal_browse_sort |= 245abnp ? ( 000[6] == 'a' && (000[7] == 'b' || 000[7] == 'i' || 000[7] == 's') && (ind2 > 0)), stripInd2, toLower, stripAccent, clean, join(" "), filter("[=&(),'-.]|\\[|\\]=>\ "), filter("[ ][ ]+=>\ ")
-journal_browse_sort |= LNK245abnp ? ( 000[6] == 'a' && (000[7] == 'b' || 000[7] == 'i' || 000[7] == 's') && (ind2 > 0)), stripInd2, toLower, stripAccent, clean, join(" "), filter("[=&(),'-.]|\\[|\\]=>\ "), filter("[ ][ ]+=>\ ")
 
 
 #  topic is Topic/Genre
