Added Video and Audio Streaming for 928g

--- a/local/import/translation_maps/format_map.properties
+++ b/local/import/translation_maps/format_map.properties
@@ -33,6 +33,8 @@ Spoken              = Spoken word recording
 Software            = Software
 CD                  = CD
 SoundRecording      = Sound Recording
+StreamingAudio      = Streaming Audio
+StreamingVideo      = Streaming Video
 Text                = Text
 Video               = Video
 tapeVideo           = Video cassette
