Created DOIs in 024 and 928.

--- a/local/import/marc.properties
+++ b/local/import/marc.properties
@@ -132,7 +132,8 @@ issn = 022ayz
 
 
 barcode = 927b
-
+doi = {024a} ? ($2 == "doi")
+doi = custom(org.vufind.index.ucDOI), getDOI  
 
 #  topic is Topic/Genre
 topic = custom, getAllAlphaSubfields(600:610:611:630:648:650:651:653:654:655:656:662, all)
